...
        ? disabledColor
        : theme.colorScheme.error;

    return AdaptiveListSection(
      children: [
        AdaptiveListTile(
          key: const Key('signOutTile'),
          leading: Icon(
            isApplePlatform
                ? CupertinoIcons.square_arrow_right
                : AppIcons.signOut,
            color: accentColor,
            size: 22,
...
